--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kylefenlon.github.io/MyWebsite",
+  "homepage": "https://kylefenlon.github.io/",
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
